Controller/controller-app/src/Controller.css
.controllerMenuContainer  {
  width: 90%;
  outline: none;
  display: flex;
}

.controllerMenuItem {
  flex-grow: 1
}

.pixelButton {
  width: 100%;
  outline: none;
  flex-grow: 1;
  user-select: none;
}
.no-click {
    pointer-events: none;
}
.pixelButton::-moz-focus-inner{
  border: 0;
}
.text {
  display: flex;
  font-family: "m6x11";
  font-weight: bold;
  font-size: 5vh;
  color: #fff;
  align-items: center;
  justify-content: center;
}

.textImage {
  height: 5vh;
  width: 5vh;
  margin: 3pt
}

.playerAvatar {
  height: 95%;
  image-rendering: crisp-edges;
}

.pauseSymbol {
  height: 50%;
  image-rendering: crisp-edges;
}

.gameControls {
  width: 100%;
  height: 100%;
  display: flex;
}

.rightColumn {
  height: 100vh;
  width: 50%;
  display: flex;
  flex-direction: column;
}

.buttonColumn {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.buttonRow {
  width: 100%;
  flex-grow: 1;
  display: flex;
  flex-direction: row;
}

.buttonImage {
  height: 60%;
  image-rendering: crisp-edges;
}

#boob {
  position: absolute;
  top: 12%;
  height: 88%;
  width: 50%;
  background: #43A047;
}
.iconButton {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 10%;
  color: white;
  font-size: 20pt;
}

#infoBar {
  position: absolute;
  background-color: #e0e0e0;
  border-color: #f5f5f5;
  height: 12%;
  width: 50%;
  top: 0;
  left: 0;
  color: #000;
  justify-content: space-between;
}

.cooldownWrapper {
  position: relative;
  width: 100%;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

.cooldownOverlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.cooldownProgressWrapper {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

canvas {
  image-rendering: pixelated;
  image-rendering: crisp-edges;
}

